# zbsp

./: .gitignore  Build_GCCDebug_Linux.sh  Build_GCCDebug_MinGW.cmd  Build_GCCRelease_Linux.sh  Build_GCCRelease_MinGW.cmd  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  win64.cmake  zbsp-msvc.cpp  zbsp-msvc.sln  zbsp-msvc.vcxproj  zbsp-msvc.vcxproj.filters
src/: brushbsp.c  bsp.c  bspfile.c  bspfile.h  cmdlib.c  cmdlib.h  csg.c  data.c  data.h  faces.c  flow.c  huffman.c  images.c  imglib.c  imglib.h  l3dslib.c  lbmlib.c  lbmlib.h  leakfile.c  lightmap.c  main.c  map.c  mathlib.c  mathlib.h  mdfour.h  models.c  patches.c  polylib.c  polylib.h  portals.c  prtfile.c  qbsp.h  qfiles.h  qrad.h  rad.c  scriplib.c  scriplib.h  sprites.c  tables.c  textures.c  (+8 more)
